tests/fail/mul_empty_stack.avm
; mul on an empty stack
mul
